force-app/main/default/objects/Estimated_Costs__c/Estimated_Costs__c.object-meta.xml
<CustomObject>
    <label>Estimated Costs</label>
    <nameField>
        <displayFormat>EC{000000}</displayFormat>
        <label>Estimated Costs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimated Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>