force-app/main/default/objects/Estimated_Costs__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>