force-app/main/default/objects/Estimated_Costs__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Estimated Costs</relationshipLabel>
    <relationshipName>Estimated_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>