force-app/main/default/objects/Estimated_Costs__c/validationRules/Amount_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount cannot be negative</errorMessage>
</ValidationRule>