force-app/main/default/objects/Estimated_Costs__c/validationRules/Check_if_EC_of_such_type_already_exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_EC_of_such_type_already_exists</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(ISNEW(), ISCHANGED(Type__c)),
  OR(
    AND(ISPICKVAL(Type__c, &#39;Venue&#39;),  
        Course__r.Estimated_Venue_Costs__c &gt; 0),
    AND(ISPICKVAL(Type__c, &#39;Travel&#39;),   
        Course__r.Estimated_Travel_Costs__c &gt; 0)
  )
)</errorConditionFormula>
    <errorMessage>An estimated cost of this type already exists on this course. Please either remove or update the existing estimated cost.</errorMessage>
</ValidationRule>